# sample-django-api

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  rabbitmq-definitions.json  rabbitmq.conf  rabbitmq.config  requirements-dev.txt  requirements-tests.txt  requirements.txt  ruff.toml
.circleci/: config.yml
clients/: factories.py  serializers.py  tests.py  urls.py  views.py
clients/fixtures/: users.yaml
dockerfiles/: Dockerfile.backend
sample_api/: api_urls.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
sample_api/fixtures/: users.yaml
sample_api/management/commands/: reset_db.py
sample_api/settings/: defaults.py  local.py.example  production.py  tests.py
tasks/: admin.py  exceptions.py  factories.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_execution_type.py  0002_auto_20201210_2020.py  0003_task_execution_type.py
