[tool.poetry]
name = "sample_api"
version = "1.0.0"
description = ""
authors = ["Fabien Loffredo <contact@fabienloffredo.com>"]

[tool.poetry.dependencies]
python = "~3.10"
Django = { version = "3.2.12", extras = ["argon2"] }
pytz = "~2021.3"
PyYAML = "~6.0"
psycopg2-binary = "~2.9.3"
celery = { extras = ["msgpack"], version = "~5.2.3" }
djangorestframework = "~3.13.1"
django-celery-results = "~2.3.0"
drf-spectacular = "~0.21.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
detect-secrets = "~1.4.0"
django-debug-toolbar = "~3.2.4"
django-extensions = "~3.1.3"
django-stubs = "~4.2.7"
djangorestframework-stubs = "~3.14.5"
ipython = "~8.0.1"
factory-boy = "~3.2.1"
mypy = "~1.9.0"
pre-commit = "~3.6.2"
ruff = "~0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
