[tool.poetry]
name = "sample_api"
version = "1.0.0"
description = ""
authors = ["Fabien Loffredo <contact@fabienloffredo.com>"]

[tool.poetry.dependencies]
python = "~3.12"
Django = { version = "4.2.13", extras = ["argon2"] }
PyYAML = "~6.0"
psycopg = { extras = ["binary"], version = "~3.2.1" }
celery = { extras = ["msgpack"], version = "~5.4.0" }
djangorestframework = "~3.15.2"
django-celery-results = "~2.5.1"
drf-spectacular = "~0.27.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
detect-secrets = "~1.5.0"
django-debug-toolbar = "~4.3.0"
django-extensions = "~3.2.3"
django-stubs = "~5.0.2"
djangorestframework-stubs = "~3.15.0"
ipython = "~8.26.0"
factory-boy = "~3.3.0"
mypy = "~1.10.1"
pre-commit = "~3.7.1"
ruff = "~0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
